ctowasm/test/samples/error/redefined_tags.c
struct X { int x; };
struct X { int x; };

struct Y;
enum Y { x }; 

int main() {
  enum X;
  struct X;
}